# the-elsa-way

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.md
.github/workflows/: deploy.yml
book/: Makefile
book/website/: index.md  myst.yml  references.bib
website/: index.md  myst.yml  references.bib
website/community-handbook/: community-handbook.md  contributing.md  governance.md  style-guide.md
website/deployment/: clinical-integration.md  deployment.md  governance-accountability.md  local-validation.md  logging-traceability.md  monitoring-auditing.md  overview.md  quality-control.md  regulatory-compliance.md  training-onboarding.md
website/design/: bias-sources.md  data-strategy.md  design.md  ethical-review.md  intended-use.md  legal-regulatory.md  overview.md  problem-definition.md  risk-management.md  social-impact.md  stakeholder-engagement.md
website/development/: addressing-ai-risks.md  data-collection.md  data-quality-fairness.md  development.md  documentation.md  human-ai-interaction.md  model-development.md  overview.md  privacy-security.md
website/evaluation/: clinical-utility-safety.md  evaluation-planning.md  evaluation.md  explainability-assessment.md  external-validation.md  fairness-bias.md  overview.md  reporting-transparency.md  robustness-testing.md  usability-ux.md
website/foreword/: ai-lifecycle.md  cite.md  elsa-principles.md  foreword.md  future-ai.md  how-to-use.md  what-is-elsa-way.md  who-is-this-for.md
website/future-ai/: explainability.md  fairness.md  future-ai.md  general-recommendations.md  overview.md  (+4 more)
(+76 files in other folders)
